raleway font added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@
    }
 
    body {
-      font-family: 'Century Gothic';
+      font-family: 'Raleway', 'Century Gothic';
       background-color: #0a192f;
       max-width: 85vw;
       margin: auto
